force-app/main/default/objects/Activity/fields/Alert_on_Due_Date_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Alert_on_Due_Date_Enabled__c</fullName>
    <formula>Owner:User.Enable_Task_Alert_on_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert on Due Date Enabled</label>
    <type>Checkbox</type>
</CustomField>