force-app/main/default/objects/Activity/fields/Assigned_to_FullName__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_FullName__c</fullName>
    <formula>Owner:User.Full_Name__c</formula>
    <label>Assigned to FullName</label>
    <type>Text</type>
</CustomField>