force-app/main/default/objects/Activity/fields/CallHourofDay__c.field-meta.xml
<CustomField>
    <fullName>CallHourofDay__c</fullName>
    <description>This pulls the hour of day from the created date</description>
    <formula>IF(AND(MONTH( ActivityDate )&gt;2, MONTH(ActivityDate )&lt;11), 
   If((VALUE(MID(TEXT(ActivityDate),12,2))-7)&lt;0,(VALUE(MID(TEXT(ActivityDate),12,2))-7)+24,(VALUE(MID(TEXT(ActivityDate ),12,2))-7)), 
   If((VALUE(MID(TEXT(ActivityDate),12,2))-8)&lt;0,(VALUE(MID(TEXT(ActivityDate ),12,2))-8)+24,(VALUE(MID(TEXT(ActivityDate),12,2))-8)))</formula>
    <label>Call Hour of Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>