force-app/main/default/objects/Activity/fields/Covenant_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Covenant_Milestones__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is checked when covenant has a milestone value in the milestone picklist of the covenant record.</description>
    <label>Covenant Milestones</label>
    <type>Checkbox</type>
</CustomField>