force-app/main/default/objects/Activity/fields/CreateDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreateDateTime__c</fullName>
    <description>this field pulls the date and time from created date</description>
    <formula>CreatedDate</formula>
    <label>CreateDateTime</label>
    <type>DateTime</type>
</CustomField>