force-app/main/default/objects/Activity/fields/CTMCallDirection__c.field-meta.xml
<CustomField>
    <fullName>CTMCallDirection__c</fullName>
    <label>CTM Call Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>