force-app/main/default/objects/Activity/fields/CTMCallDisposition__c.field-meta.xml
<CustomField>
    <fullName>CTMCallDisposition__c</fullName>
    <inlineHelpText>Outcome of the Call</inlineHelpText>
    <label>CTM Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Dial Hangup</fullName>
            </value>
            <value>
                <fullName>Missed Call</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>