force-app/main/default/objects/Activity/fields/CTMCallID__c.field-meta.xml
<CustomField>
    <fullName>CTMCallID__c</fullName>
    <description>Call ID Used In Call Tracking Metrics</description>
    <inlineHelpText>Call ID Used In Call Tracking Metrics</inlineHelpText>
    <label>CTM Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>