force-app/main/default/objects/Activity/fields/CTMCallStatus__c.field-meta.xml
<CustomField>
    <fullName>CTMCallStatus__c</fullName>
    <label>CTM Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>