force-app/main/default/objects/Activity/fields/CTMHour__c.field-meta.xml
<CustomField>
    <fullName>CTMHour__c</fullName>
    <label>CTM Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>