force-app/main/default/objects/Activity/fields/CTMRecordingURL__c.field-meta.xml
<CustomField>
    <fullName>CTMRecordingURL__c</fullName>
    <label>CTM Recording URL</label>
    <type>Url</type>
</CustomField>