force-app/main/default/objects/Activity/fields/CTMRingTime__c.field-meta.xml
<CustomField>
    <fullName>CTMRingTime__c</fullName>
    <label>CTM Ring Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>