force-app/main/default/objects/Activity/fields/CTMStatus__c.field-meta.xml
<CustomField>
    <fullName>CTMStatus__c</fullName>
    <label>CTM Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>