force-app/main/default/objects/Activity/fields/CTMTalkTime__c.field-meta.xml
<CustomField>
    <fullName>CTMTalkTime__c</fullName>
    <label>CTM Talk Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>