force-app/main/default/objects/Activity/fields/CTMTotalTime__c.field-meta.xml
<CustomField>
    <fullName>CTMTotalTime__c</fullName>
    <label>CTM Total Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>