force-app/main/default/objects/Activity/fields/CTMTrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>CTMTrackingNumber__c</fullName>
    <label>CTM Tracking Number</label>
    <type>Phone</type>
</CustomField>