force-app/main/default/objects/Activity/fields/CTMTrackingNumberDescription__c.field-meta.xml
<CustomField>
    <fullName>CTMTrackingNumberDescription__c</fullName>
    <label>CTM Tracking Number Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>