force-app/main/default/objects/Activity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF( ISBLANK( Related_to_Contact__c ),  
 Related_to_Lead__r.Email, 
 Related_to_Contact__r.Email
)</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>