force-app/main/default/objects/Activity/fields/Internal_Call__c.field-meta.xml
<CustomField>
    <fullName>Internal_Call__c</fullName>
    <description>Indicates if the call was made to an internal number</description>
    <formula>OR (
CONTAINS( Subject , &quot;949344&quot;),
CONTAINS( Subject , &quot;949421&quot;),
CONTAINS( Subject , &quot;212230&quot;),
CONTAINS( Subject , &quot;305748000&quot;),
CONTAINS( Subject , &quot;877820&quot;),
CONTAINS( Subject , &quot;31034070&quot;),
CONTAINS( Subject , &quot;8133794350&quot;),
CONTAINS( Subject , &quot;949288&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Call</label>
    <type>Checkbox</type>
</CustomField>