force-app/main/default/objects/Activity/fields/Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product__c</fullName>
    <label>Loan Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bridge Loan</fullName>
            </value>
            <value>
                <fullName>Commercial Loan</fullName>
            </value>
            <value>
                <fullName>Single Asset Bridge Loan</fullName>
            </value>
            <value>
                <fullName>Single Rental Property Loan</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>