force-app/main/default/objects/Activity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF( ISBLANK(  Related_to_Contact__c  ), 
 Related_to_Lead__r.Phone,
 Related_to_Contact__r.Phone
 )</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>