force-app/main/default/objects/Activity/fields/Property_Extension__c.field-meta.xml
<CustomField>
    <fullName>Property_Extension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Extension</label>
    <referenceTo>Property_Extension__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>