force-app/main/default/objects/Activity/fields/rcsfl__hvs_disposition__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__hvs_disposition__c</fullName>
    <label>HVS Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Back Later</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Meaningful Connect</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>