force-app/main/default/objects/Activity/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who referred this Deal</description>
    <inlineHelpText>The user who referred this Deal</inlineHelpText>
    <label>Referred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>