force-app/main/default/objects/Activity/fields/Related_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_ID__c</fullName>
    <formula>WhatId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object ID</label>
    <type>Text</type>
</CustomField>