force-app/main/default/objects/Activity/fields/Related_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>