force-app/main/default/objects/Activity/fields/ringdna__Call_Direction__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Direction__c</fullName>
    <description>This is the direction of the RingDNA call.</description>
    <label>Call Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>