force-app/main/default/objects/Activity/fields/ringdna__Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Disposition__c</fullName>
    <description>This describes the outcome of a call</description>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>CAF Internal</fullName>
            </value>
            <value>
                <fullName>DO NOT CALL</fullName>
            </value>
            <value>
                <fullName>Set Appointment</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>PC1ST</fullName>
            </value>
            <value>
                <fullName>PC2ST</fullName>
            </value>
            <value>
                <fullName>PC3ST</fullName>
            </value>
            <value>
                <fullName>EM1ST</fullName>
            </value>
            <value>
                <fullName>EM2ST</fullName>
            </value>
            <value>
                <fullName>EM3ST</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>Dial Hang Up</fullName>
            </value>
            <value>
                <fullName>Missed Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>