force-app/main/default/objects/Activity/fields/ringdna__Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Duration__c</fullName>
    <description>Call duration measured in seconds</description>
    <label>Call Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>