force-app/main/default/objects/Activity/fields/ringdna__Call_Rating__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Rating__c</fullName>
    <description>1 is low 5 is high</description>
    <label>Call Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>