force-app/main/default/objects/Activity/fields/RingDNA_Status__c.field-meta.xml
<CustomField>
    <fullName>RingDNA_Status__c</fullName>
    <description>This custom field helps bucket calls as voicemail, abandoned, or answered.</description>
    <formula>If(ringdna__Voicemail__c = True, &quot;Voicemail&quot;, 
If(ringdna__Abandoned_Call__c = True, &quot;Abandoned&quot;, 
IF(AND(ringdna__Abandoned_Call__c = False,ringdna__Voicemail__c = False), &quot;Answered&quot;, &quot;other&quot;)))</formula>
    <label>RingDNA Status</label>
    <type>Text</type>
</CustomField>