force-app/main/default/objects/Activity/fields/Task_Due_Today__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Today__c</fullName>
    <description>Due Date is equal to today</description>
    <formula>ActivityDate = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Due Today</label>
    <type>Checkbox</type>
</CustomField>