force-app/main/default/objects/Activity/fields/Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Day__c</fullName>
    <formula>TIMEVALUE(  CreatedDate  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time of Day</label>
    <type>Time</type>
</CustomField>