force-app/main/default/objects/Activity/fields/X10_Day_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>X10_Day_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>10 Day Email Sent</label>
    <type>Checkbox</type>
</CustomField>